[tool.poetry]
name = "secure-auth-api"
version = "0.1.0"
description = ""
authors = ["Juan Camilo Palacio Alvarez"]
readme = "README.md"
packages = [{include = "secureauthapi"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

uvicorn = ">=0.34.3,<0.35.0"
dotenv = ">=0.9.9,<0.10.0"
fastapi = { version = ">=0.115.12,<0.116.0", extras = ["all"] }
slowapi = "^0.1.9"
sqlmodel = "^0.0.24"
babel = "^2.17.0"
apscheduler = "^3.11.0"
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
